--- a/blink-frontend/src/components/Navbar.css
+++ b/blink-frontend/src/components/Navbar.css
@@ -31,6 +31,7 @@
 .dropdown-menu-end {
   right: 0 !important;
   left: auto !important;
+  top: 90%;
   transform: translateX(25px); /* slightly pull left to fit fully */
 }
 
